[gd_scene load_steps=3 format=3 uid="uid://bpktlc2a8pgw1"]

[ext_resource type="Script" path="res://scripts/death_screen.gd" id="1_gt44t"]
[ext_resource type="Theme" uid="uid://sabiea1hheuf" path="res://themes/rpg.tres" id="1_pskob"]

[node name="DeathScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_gt44t")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.215686, 0.215686, 0.215686, 0.517647)

[node name="PanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -636.0
offset_top = -417.0
offset_right = 636.0
offset_bottom = 417.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_pskob")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 72
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.701961, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 4
theme_override_font_sizes/font_size = 96
text = "Permainan Berakhir"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 138)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1

[node name="SubjectLabel" type="Label" parent="PanelContainer/VBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 0.654902)
theme_override_font_sizes/font_size = 68
text = "\"Jaringan Komputer\""

[node name="StatLabel" type="Label" parent="PanelContainer/VBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 0.654902)
theme_override_font_sizes/font_size = 68
text = "Level: 1
Skor: 0
"

[node name="RetryBtn" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(464, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 68
text = "Bermain Lagi"

[node name="MainMenuBtn" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(464, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 68
text = "Menu Utama"

[connection signal="pressed" from="PanelContainer/VBoxContainer/RetryBtn" to="." method="retry_btn"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MainMenuBtn" to="." method="main_menu_btn"]
